# lablab

AI_Care/: package-lock.json
AI_Care/backend/: .env  ai_service.py  api.py  config.py  database.py  main.py  models.py  requirements.txt  segnalazioni.db  test.py  utils.py
AI_Care/front_end_segnalazioni_PA/src/: App.tsx
AI_Care/front_end_segnalazioni_PA/src/components/: ContatoreSegnalazioni.tsx  ReportTable.tsx  Statistics.tsx  TabellaStatistiche.tsx
AI_Care/front_end_segnalazioni_PA/src/components/statistiche/: ContatoreSegnalazioni.tsx  TabellaStatistiche.tsx
AI_Care/front_end_segnalazioni_PA/src/components/ui/: BadgePriorita.tsx  ContatoreCategoriaUtenti.tsx
AI_Care/front_end_segnalazioni_PA/src/types/: index.ts
AI_Care/front_end_segnalazioni_PA/src/utils/: analizzaPriorita.ts  priorityAnalyzer.ts
AI_Care/login_pubblica_amministrazione/src/components/: Footer.tsx  Header.tsx  LoginForm.tsx  LoginPage.tsx
AI_Care/src/: App.tsx
AI_Care/src/components/: ChatInput.tsx  ChatMessage.tsx  ReportSuggestions.tsx  WelcomeMessage.tsx
AI_Care/src/hooks/: useChat.ts
AI_Care/src/services/: aiService.ts
AI_Care/src/types/: chat.ts
social_wellbeing/: README.md  pyproject.toml
social_wellbeing/src/: .env
social_wellbeing/src/orchestator/: crew.py  main.py
social_wellbeing/src/orchestator/config/: agent.yaml  tasks.yaml  tolls.yaml
social_wellbeing/src/orchestator/tools/: data_tool.py  openrouter_tool.py  routing_tool.py
